--- a/ivp-extend/raft/src/iRaftRoboteq/CMakeLists.txt
+++ b/ivp-extend/raft/src/iRaftRoboteq/CMakeLists.txt
@@ -17,6 +17,7 @@ ADD_EXECUTABLE(iRaftRoboteq ${SRC})
 
 TARGET_LINK_LIBRARIES(iRaftRoboteq
     boost_system
+    boost_thread
     ${MOOS_LIBRARIES}
     mbutil
     m
