--- a/ivp-extend/raft/src/CMakeLists.txt
+++ b/ivp-extend/raft/src/CMakeLists.txt
@@ -18,6 +18,7 @@ INCLUDE_DIRECTORIES(${LOCAL_LIBRARY_DIRS})
 
 ADD_SUBDIRECTORY(iRaftRoboteq)
 ADD_SUBDIRECTORY(iXbox360Controller)
+ADD_SUBDIRECTORY(pRaftControl)
 
 IF(BUILD_SHORE_APPS)
     ADD_SUBDIRECTORY(testing_app)
