--- a/moos-code/src/CMakeLists.txt
+++ b/moos-code/src/CMakeLists.txt
@@ -20,6 +20,7 @@ ADD_SUBDIRECTORY(iEcaArm)
 ADD_SUBDIRECTORY(iRaftRoboteq)
 ADD_SUBDIRECTORY(iXbox360Controller)
 ADD_SUBDIRECTORY(pRaftControl)
+ADD_SUBDIRECTORY(iLoadCell)
 
 IF(BUILD_SHORE_APPS)
     ADD_SUBDIRECTORY(testing_app)
